# Auditrix

./: .dockerignore  Auditrix_GRPO_Training.ipynb  BLOG.md  CHANGELOG.md  Dockerfile  HF_BLOG.md  README.md  SUBMISSION_SUMMARY.md  benchmark_predictions.html  dashboard.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  train.py  train_grpo.py  train_grpo_colab.py
.streamlit/: config.toml
model-benchmark-logs/: inference_runs.jsonl
openenv_compliance_audit/: __init__.py  environment.py  events.py  graders.py  models.py  rules.py  server.py  tasks.py
openenv_compliance_audit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
openenv_ticket_triage/: __init__.py  environment.py  graders.py  models.py  server.py  tasks.py
scripts/: validate-submission.sh
server/: app.py
tests/: test_environment.py  test_events.py  test_server.py
